# hw3-yvonne0808

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml  requirements.txt
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
